--- a/index.html
+++ b/index.html
@@ -544,13 +544,91 @@
 		<em>Annals of surgery</em>, 2018.</br>
 	</li>
 	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.thno.org/v08p6350.htm" target="_blank">MicroRNA-647 targets SRF-MYH9 axis to suppress invasion and metastasis of gastric cancer: Erratum</a><br>
+		Gengtai Ye, Kunzhai Huang, Jiang Yu, Liying Zhao, Xianjun Zhu, Qingbin Yang, Wende Li, <b>Yuming Jiang</b>, Baoxiong Zhuang, Hao Liu, Zhiyong Shen, Da Wang, Li Yan, Lei Zhang, Haipeng Zhou, Yanfeng Hu, Haijun Deng, Guoxin Li, Xiaolong Qi.<br>
+		<em>Theranostics</em>, 2018.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.thno.org/v08p5915.htm" target="_blank">Radiomic signature of 18F fluorodeoxyglucose PET/CT for prediction of gastric cancer survival and chemotherapeutic benefits</a><br>
+		<b>Yuming Jiang</b>, Qingyu Yuan, Wenbing Lv, Sujuan Xi, Weicai Huang, Zepang Sun, Hao Chen, Liying Zhao, Wei Liu, Yanfeng Hu, Lijun Lu, Jianhua Ma, Tuanjie Li, Jiang Yu, Quanshi Wang, Guoxin Li.<br>
+		<em>Theranostics</em>, 2018.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5620246/" target="_blank">A prospective appraisal of preoperative body mass index in D2-resected patients with non-metastatic gastric carcinoma and Siewert type II/III adenocarcinoma of esophagogastric junction: results from a large-scale cohort</a><br>
+		Lei Huang, Zhi-Jian Wei, Tuan-Jie Li, <b>Yu-Ming Jiang</b>, A-Man Xu.<br>
+		<em>Oncotarget</em>, 2017.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.thelancet.com/journals/ebiom/article/PIIS2352-3964(17)30263-3/fulltext" target="_blank">Prognostic and predictive value of p21-activated kinase 6 associated support vector machine classifier in gastric cancer treated by 5-fluorouracil/oxaliplatin chemotherapy</a><br>
+		<b>Yuming Jiang</b>, Wei Liu, Tuanjie Li, Yanfeng Hu, Sile Chen, Sujuan Xi, Yajia Wen, Lei Huang, Liying Zhao, Cuicui Xiao, Xiaohui Huang, Zhen Han, Hao Liu, Xiaolong Qi, Yang Yang, Jiang Yu, Shirong Cai, Guoxin Li.<br>
+		<em>EBioMedicine</em>, 2017.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://jamanetwork.com/journals/jamasurgery/article-abstract/2627289" target="_blank">Association of adjuvant chemotherapy with survival in patients with stage II or III gastric cancer</a><br>
+		<b>Yuming Jiang</b>, Tuanjie Li, Xiaoling Liang, Yanfeng Hu, Lei Huang, Zhenchen Liao, Liying Zhao, Zhen Han, Shuguang Zhu, Menglan Wang, Yangwei Xu, Xiaolong Qi, Hao Liu, Yang Yang, Jiang Yu, Wei Liu, Shirong Cai, Guoxin Li.<br>
+		<em>JAMA surgery</em>, 2017.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.sciencedirect.com/science/article/pii/S1936523316302303" target="_blank">Prognostic value of E-cadherin-, CD44-, and MSH2-associated nomograms in patients with stage II and III colorectal cancer</a><br>
+		Jinmiao Qu, <b>Yuming Jiang</b>, Hao Liu, Haijun Deng, Jiang Yu, Xiaolong Qi, Weiting Ge, Guoxin Li.<br>
+		<em>Translational oncology</em>, 2017.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://aacrjournals.org/clincancerres/article/23/6/1575/80308/Interleukin-17-Producing-Neutrophils-Link" target="_blank">Interleukin-17–producing neutrophils link inflammatory stimuli to disease progression by promoting angiogenesis in gastric cancer</a><br>
+		Tuan-Jie Li, <b>Yu-Ming Jiang</b>, Yan-Feng Hu, Lei Huang, Jiang Yu, Li-Ying Zhao, Hai-Jun Deng, Ting-Yu Mou, Hao Liu, Yang Yang, Qi Zhang, Guo-Xin Li.<br>
+		<em>Clinical Cancer Research</em>, 2017.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5436246/" target="_blank">Comparison of prognostic nomograms based on different nodal staging systems in patients with resected gastric cancer</a><br>
+		Zi-Xian Wang, Miao-Zhen Qiu, <b>Yu-Ming Jiang</b>, Zhi-Wei Zhou, Guo-Xin Li, Rui-Hua Xu.<br>
+		<em>Journal of Cancer</em>, 2017.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5595136/" target="_blank">MicroRNA-647 targets SRF-MYH9 axis to suppress invasion and metastasis of gastric cancer</a><br>
+		Gengtai Ye, Kunzhai Huang, Jiang Yu, Liying Zhao, Xianjun Zhu, Qingbin Yang, Wende Li, <b>Yuming Jiang</b>, Baoxiong Zhuang, Hao Liu, Zhiyong Shen, Da Wang, Li Yan, Lei Zhang, Haipeng Zhou, Yanfeng Hu, Haijun Deng, Guoxin Li, Xiaolong Qi.<br>
+		<em>Theranostics</em>, 2017.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.tandfonline.com/doi/full/10.1080/2162402X.2015.1069936" target="_blank">Gastric cancer cells inhibit natural killer cell proliferation and induce apoptosis via prostaglandin E2</a><br>
+		Tuanjie Li, Qi Zhang, <b>Yuming Jiang</b>, Jiang Yu, Yanfeng Hu, Tingyu Mou, Guihua Chen, Guoxin Li.<br>
+		<em>Oncoimmunology</em>, 2016.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0109582" target="_blank">The impact of prophylactic dexamethasone on nausea and vomiting after thyroidectomy: a systematic review and meta-analysis</a><br>
+		Zhenhong Zou, <b>Yuming Jiang</b>, Mingjia Xiao, Ruiyao Zhou.<br>
+		<em>PLoS One</em>, 2014.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://europepmc.org/article/med/25164904" target="_blank">Exploration of digestive tract reconstruction with totally laparoscopic total gastrectomy for gastric cancer</a><br>
+		Zhenhong Zou, Tingyu Mou, Zhenwei Deng, <b>Yuming Jiang</b>, Guoxin Li.<br>
+		<em>Zhonghua wei Chang wai ke za zhi= Chinese Journal of Gastrointestinal Surgery</em>, 2014.</br>
+	</li>
+	</ul>
 
-
-
-
-
-
-	
 <br>
 </div>
 
