--- a/index.html
+++ b/index.html
@@ -253,6 +253,34 @@
 	</ul>
 	<ul>
 	<li>
+		<a href="https://jitc.bmj.com/content/11/Suppl_1/A1434" target="_blank">1291 Multi-modal deep learning integrating radiology and pathology images to predict cancer immunotherapy response: a retrospective multi-cohort study</a><br>
+		<b>Yuming Jiang</b>, Zhe Li, Ruijiang Li.<br>
+		<em>Journal for ImmunoTherapy of Cancer</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="https://jitc.bmj.com/content/11/Suppl_1/A1435" target="_blank">1292 Multimodal pathomics integration for prediction of response to PD-(L) 1 blockade in patients with advanced gastric cancer</a><br>
+		<b>Yuming Jiang</b>, Taojun Zhang.<br>
+		<em>Journal for ImmunoTherapy of Cancer</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="https://link.springer.com/chapter/10.1007/978-3-031-47076-9_13" target="_blank">Ultrafast Labeling for Multiplexed Immunobiomarkers from Label-free Fluorescent Images</a><br>
+		Zixia Zhou, <b>Yuming Jiang</b>, Ruijiang Li, Lei Xing.<br>
+		<em>International Workshop on Applications of Medical AI</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="https://link.springer.com/chapter/10.1007/978-3-031-47076-9_12" target="_blank">Single-Cell Spatial Analysis of Histopathology Images for Survival Prediction via Graph Attention Network</a><br>
+		Zhe Li, <b>Yuming Jiang</b>, Leon Liu, Yong Xia, Ruijiang Li.<br>
+		<em>International Workshop on Applications of Medical AI</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
 		<a href="" target="_blank">Cancer immunotherapy response prediction from multi-modal clinical and image data using semi-supervised deep learning</a><br>
 		Xi Wang, <b>Yuming Jiang</b>, Hao Chen, Taojun Zhang, Zhen Han, Chuanli Chen, Qingyu Yuan, Wenjun Xiong, Wei Wang, Guoxin Li, Pheng-Ann Heng, Ruijiang Li.<br>
 		<em>Radiotherapy and Oncology</em>, 2023.</br>
