--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">A statistical deformation model-based data augmentation method for volumetric medical image segmentation</a><br>
+		<a href="https://www.sciencedirect.com/science/article/abs/pii/S136184152300244X" target="_blank">A statistical deformation model-based data augmentation method for volumetric medical image segmentation</a><br>
 		Wenfeng He, Chulong Zhang, Jingjing Dai, Lin Liu, Tangsheng Wang, Xuan Liu, <b>Yuming Jiang</b>, Na Li, Jing Xiong, Lei Wang, Yaoqin Xie, Xiaokun Liang.<br>
 		<em>Medical Image Analysis</em>,2024.</br>
 	</li>
@@ -246,7 +246,7 @@
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Morphological diversity of cancer cells predicts prognosis across tumor types</a><br>
+		<a href="https://academic.oup.com/jnci/advance-article-abstract/doi/10.1093/jnci/djad243/7429400" target="_blank">Morphological diversity of cancer cells predicts prognosis across tumor types</a><br>
 		Rasoul Sali, <b>Yuming Jiang</b>, Armin Attaranzadeh, Brittany Holmes, Ruijiang Li.<br>
 		<em>Journal of the National Cancer Institute</em>, 2023.</br>
 	</li>
@@ -281,77 +281,77 @@
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Cancer immunotherapy response prediction from multi-modal clinical and image data using semi-supervised deep learning</a><br>
+		<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167814023003316" target="_blank">Cancer immunotherapy response prediction from multi-modal clinical and image data using semi-supervised deep learning</a><br>
 		Xi Wang, <b>Yuming Jiang</b>, Hao Chen, Taojun Zhang, Zhen Han, Chuanli Chen, Qingyu Yuan, Wenjun Xiong, Wei Wang, Guoxin Li, Pheng-Ann Heng, Ruijiang Li.<br>
 		<em>Radiotherapy and Oncology</em>, 2023.</br>
 	</li>
 	</ul>	
 	<ul>
 	<li>
-		<a href="" target="_blank">Non-invasive tumor microenvironment evaluation and treatment response prediction in gastric cancer using deep learning radiomics</a><br>
+		<a href="https://www.cell.com/cell-reports-medicine/pdf/S2666-3791(23)00299-9.pdf" target="_blank">Non-invasive tumor microenvironment evaluation and treatment response prediction in gastric cancer using deep learning radiomics</a><br>
 		<b>Yuming Jiang</b>, Kangneng Zhou, Zepang Sun, Hongyu Wang, Jingjing Xie, Taojun Zhang, Shengtian Sang, Md Tauhidul Islam, Jen-Yeu Wang, Chuanli Chen, Qingyu Yuan, Sujuan Xi, Tuanjie Li, Yikai Xu, Wenjun Xiong, Wei Wang, Guoxin Li, Ruijiang Li.<br>
 		<em>Cell Reports Medicine</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Biology-guided deep learning predicts prognosis and cancer immunotherapy response</a><br>
+		<a href="https://www.nature.com/articles/s41467-023-40890-x" target="_blank">Biology-guided deep learning predicts prognosis and cancer immunotherapy response</a><br>
 		<b>Yuming Jiang</b>, Zhicheng Zhang, Wei Wang, Weicai Huang, Chuanli Chen, Sujuan Xi, M Usman Ahmad, Yulan Ren, Shengtian Sang, Jingjing Xie, Jen-Yeu Wang, Wenjun Xiong, Tuanjie Li, Zhen Han, Qingyu Yuan, Yikai Xu, Lei Xing, George A Poultsides, Guoxin Li, Ruijiang Li.<br>
 		<em>Nature Communications</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">An Unsupervised Learning-Based Regional Deformable Model for Automated Multi-Organ Contour Propagation</a><br>
+		<a href="https://link.springer.com/article/10.1007/s10278-023-00779-z" target="_blank">An Unsupervised Learning-Based Regional Deformable Model for Automated Multi-Organ Contour Propagation</a><br>
 		Xiaokun Liang, Jingjing Dai, Xuanru Zhou, Lin Liu, Chulong Zhang, <b>Yuming Jiang</b>, Na Li, Tianye Niu, Yaoqin Xie, Zhenhui Dai, Xuetao Wang.<br>
 		<em>Journal of Digital Imaging</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Noninvasive imaging evaluation of peritoneal recurrence and chemotherapy benefit in gastric cancer after gastrectomy: a multicenter study</a><br>
+		<a href="https://journals.lww.com/international-journal-of-surgery/fulltext/2023/07000/Noninvasive_imaging_evaluation_of_peritoneal.20.aspx" target="_blank">Noninvasive imaging evaluation of peritoneal recurrence and chemotherapy benefit in gastric cancer after gastrectomy: a multicenter study</a><br>
 		Zepang Sun, Wei Wang, Weicai Huang, Taojun Zhang, Chuanli Chen, Qingyu Yuan, Yan Chen, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Yanfeng Hu, Jiang Yu, Hao Liu, Lequan Yu, Yikai Xu, Guoxin Li, <b>Yuming Jiang</b>.<br>
 		<em>International Journal of Surgery</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Survival Prediction via Hierarchical Multimodal Co-Attention Transformer: A Computational Histology-Radiology Solution</a><br>
+		<a href="https://ieeexplore.ieee.org/abstract/document/10086562" target="_blank">Survival Prediction via Hierarchical Multimodal Co-Attention Transformer: A Computational Histology-Radiology Solution</a><br>
 		Zhe Li, <b>Yuming Jiang</b>, Mengkang Lu, Ruijiang Li, Yong Xia.<br>
 		<em>IEEE Transactions on Medical Imaging</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Artificial intelligence for clinical oncology: current status and future outlook</a><br>
+		<a href="https://www.sciencedirect.com/science/article/pii/S2095927323001135?via%3Dihub" target="_blank">Artificial intelligence for clinical oncology: current status and future outlook</a><br>
 		<b>Yuming Jiang</b>, Ruijiang Li, Guoxin Li.<br>
 		<em>Science bulletin</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Sinogram domain metal artifact correction of CT via deep learning</a><br>
+		<a href="https://www.sciencedirect.com/science/article/abs/pii/S0010482523001750" target="_blank">Sinogram domain metal artifact correction of CT via deep learning</a><br>
 		Yulin Zhu, Hanqing Zhao, Tangsheng Wang, Lei Deng, Yupeng Yang, <b>Yuming Jiang</b>, Na Li, Yinping Chan, Jingjing Dai, Chulong Zhang, Yunhui Li, Yaoqin Xie, Xiaokun Liang.<br>
 		<em>Computers in Biology and Medicine</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Development and Validation of a Machine Learning Model for Detection and Classification of Tertiary Lymphoid Structures in Gastrointestinal Cancers</a><br>
+		<a href="https://jamanetwork.com/journals/jamanetworkopen/article-abstract/2800715" target="_blank">Development and Validation of a Machine Learning Model for Detection and Classification of Tertiary Lymphoid Structures in Gastrointestinal Cancers</a><br>
 		Zhe Li, <b>Yuming Jiang</b>, Bailiang Li, Zhen Han, Jeanne Shen, Yong Xia, Ruijiang Li.<br>
 		<em>JAMA Network Open</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Non-invasive CT imaging biomarker to predict immunotherapy response in gastric cancer: a multicenter study</a><br>
+		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10668251/" target="_blank">Non-invasive CT imaging biomarker to predict immunotherapy response in gastric cancer: a multicenter study</a><br>
 		Weicai Huang, Wenjun Xiong, Lei Tang, Chuanli Chen, Qingyu Yuan, Cheng Zhang, Kangneng Zhou, Zepang Sun, Taojun Zhang, Zhen Han, Hao Feng, Xiaokun Liang, Yonghong Zhong, Haijun Deng, Lequan Yu, Yikai Xu, Wei Wang, Lin Shen, Guoxin Li, <b>Yuming Jiang</b>.<br>
 		<em>Journal for ImmunoTherapy of Cancer</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
+		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10668251/" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
 		Yanyan Huang, Weiqin Zhao, Shujun Wang, Yu Fu, <b>Yuming Jiang</b>, Lequan Yu.<br>
 		<em>Proceedings of the IEEE/CVF International Conference on Computer Vision</em>, 2023.</br>
 	</li>
@@ -360,42 +360,42 @@
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">1284 Biology-guided deep learning predicts prognosis and cancer immunotherapy response</a><br>
+		<a href="https://jitc.bmj.com/content/10/suppl_2/a1332" target="_blank">1284 Biology-guided deep learning predicts prognosis and cancer immunotherapy response</a><br>
 		<b>Yuming Jiang</b>, Zhicheng Zhang, Wei Wang, Chuanli Chen, Sujuan Xi, M Usman Ahmad, Yulan Ren, Shengtian Sang, Jingjing Xie, Wenjun Xiong, Tuanjue Li, Zhen Han, Qingyu Yuan, Yikai Xu, Lei Xing, George Poultsides, Guoxin Li, Ruijiang Li.<br>
 		<em>Journal for ImmunoTherapy of Cancer</em>, 2022.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Noninvasive imaging of the tumor immune microenvironment correlates with response to immunotherapy in gastric cancer</a><br>
+		<a href="https://www.nature.com/articles/s41467-022-32816-w" target="_blank">Noninvasive imaging of the tumor immune microenvironment correlates with response to immunotherapy in gastric cancer</a><br>
 		Weicai Huang, <b>Yuming Jiang</b>, Wenjun Xiong, Zepang Sun, Chuanli Chen, Qingyu Yuan, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Shitong Yu, Yanfeng Hu, Jiang Yu, Yan Chen, Liying Zhao, Hao Liu, Zhiwei Zhou, Wei Wang, Wei Wang, Yikai Xu, Guoxin Li.<br>
 		<em>Nature Communications</em>, 2022.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">A Hybrid Deep Feature-Based Deformable Image Registration Method for Pathology Images</a><br>
+		<a href="https://arxiv.org/abs/2208.07655" target="_blank">A Hybrid Deep Feature-Based Deformable Image Registration Method for Pathology Images</a><br>
 		Chulong Zhang, <b>Yuming Jiang</b>, Na Li, Zhicheng Zhang, Md Tauhidul Islam, Jingjing Dai, Lin Liu, Wenfeng He, Wenjian Qin, Jing Xiong, Yaoqin Xie, Xiaokun Liang.<br>
 		<em>arXiv preprint arXiv:2208.07655</em>, 2022.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">PAK6 promotes homologous-recombination to enhance chemoresistance to oxaliplatin through ATR/CHK1 signaling in gastric cancer</a><br>
+		<a href="https://www.nature.com/articles/s41419-022-05118-8" target="_blank">PAK6 promotes homologous-recombination to enhance chemoresistance to oxaliplatin through ATR/CHK1 signaling in gastric cancer</a><br>
 		Weicai Huang, Zhen Han, Zepang Sun, Hao Feng, Liying Zhao, Qingyu Yuan, Chuanli Chen, Shitong Yu, Yanfeng Hu, Jiang Yu, Hao Liu, Guoxin Li, <b>Yuming Jiang</b>.<br>
 		<em>Cell Death & Disease</em>, 2022.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Predicting peritoneal recurrence and disease-free survival from CT images in gastric cancer with multitask deep learning: a retrospective study</a><br>
+		<a href="https://www.thelancet.com/journals/landig/article/PIIS2589-7500(22)00040-1/fulltext" target="_blank">Predicting peritoneal recurrence and disease-free survival from CT images in gastric cancer with multitask deep learning: a retrospective study</a><br>
 		<b>Yuming Jiang</b>, Zhicheng Zhang, Qingyu Yuan, Wei Wang, Hongyu Wang, Tuanjie Li, Weicai Huang, Jingjing Xie, Chuanli Chen, Zepang Sun, Jiang Yu, Yikai Xu, George A Poultsides, Lei Xing, Zhiwei Zhou, Guoxin Li, Ruijiang Li.<br>
 		<em>The Lancet Digital Health</em>, 2022.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Tumor microenvironment characterization for assessment of recurrence and survival outcome in gastric cancer to predict chemotherapy and immunotherapy response</a><br>
+		<a href="https://www.frontiersin.org/journals/immunology/articles/10.3389/fimmu.2022.890922/full" target="_blank">Tumor microenvironment characterization for assessment of recurrence and survival outcome in gastric cancer to predict chemotherapy and immunotherapy response</a><br>
 		Yan Chen, Zepang Sun, Li Wan, Hongzhuan Chen, Tieju Xi, <b>Yuming Jiang</b>.<br>
 		<em>Frontiers in Immunology</em>, 2022.</br>
 	</li>
@@ -404,28 +404,28 @@
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Radiomics signature based on computed tomography images for the preoperative prediction of lymph node metastasis at individual stations in gastric cancer: A multicenter study</a><br>
+		<a href="https://www.sciencedirect.com/science/article/abs/pii/S0167814021087958" target="_blank">Radiomics signature based on computed tomography images for the preoperative prediction of lymph node metastasis at individual stations in gastric cancer: A multicenter study</a><br>
 		Zepang Sun, <b>Yuming Jiang</b>, Chuanli Chen, Huan Zheng, Weicai Huang, Benjamin Xu, Weijing Tang, Qingyu Yuan, Kangneng Zhou, Xiaokun Liang, Hao Chen, Zhen Han, Hao Feng, Shitong Yu, Yanfeng Hu, Jiang Yu, Zhiwei Zhou, Wei Wang, Yikai Xu, Guoxin Li.<br>
 		<em>Radiotherapy and Oncology</em>, 2021.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Development and validation of a deep learning CT signature to predict survival and chemotherapy benefit in gastric cancer: a multicenter, retrospective study</a><br>
+		<a href="https://journals.lww.com/annalsofsurgery/abstract/2021/12000/development_and_validation_of_a_deep_learning_ct.415.aspx" target="_blank">Development and validation of a deep learning CT signature to predict survival and chemotherapy benefit in gastric cancer: a multicenter, retrospective study</a><br>
 		<b>Yuming Jiang</b>, Cheng Jin, Heng Yu, Jia Wu, Chuanli Chen, Qingyu Yuan, Weicai Huang, Yanfeng Hu, Yikai Xu, Zhiwei Zhou, George A Fisher Jr, Guoxin Li, Ruijiang Li.<br>
 		<em>Annals of surgery</em>, 2021.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">The epithelial and stromal immune microenvironment in gastric cancer: A comprehensive analysis reveals prognostic factors with digital cytometry</a><br>
+		<a href="https://www.mdpi.com/2072-6694/13/21/5382" target="_blank">The epithelial and stromal immune microenvironment in gastric cancer: A comprehensive analysis reveals prognostic factors with digital cytometry</a><br>
 		Wenjun Shen, Guoyun Wang, Georgia R Cooper, <b>Yuming Jiang</b>, Xin Zhou.<br>
 		<em>Cancers</em>, 2021.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Radiographical assessment of tumour stroma and treatment outcomes using deep learning: a retrospective, multicohort study</a><br>
+		<a href="https://www.thelancet.com/journals/landig/article/PIIS2589-7500(21)00065-0/fulltext" target="_blank">Radiographical assessment of tumour stroma and treatment outcomes using deep learning: a retrospective, multicohort study</a><br>
 		<b>Yuming Jiang</b>, Xiaokun Liang, Zhen Han, Wei Wang, Sujuan Xi, Tuanjie Li, Chuanli Chen, Qingyu Yuan, Na Li, Jiang Yu, Yaoqin Xie, Yikai Xu, Zhiwei Zhou, George A Poultsides, Guoxin Li, Ruijiang Li.<br>
 		<em>The Lancet Digital Health</em>, 2021.</br>
 	</li>
