--- a/index.html
+++ b/index.html
@@ -215,28 +215,28 @@
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S0895611124000132?via%3Dihub" target="_blank">QUIZ: An arbitrary volumetric point matching method for medical imageregistration</a><br>
 		Lin Liu, Xinxin Fan, Haoyang Liu, Chulong Zhang, Weibin Kong, Jingjing Dai, <b>Yuming Jiang</b>, Yaoqin Xie, Xiaokun Liang.<br>
-		<em>Computerized Medical Imaging and Graphics</em>,2024.</br>
+		<em>Computerized Medical Imaging and Graphics</em>, 2024.</br>
 	</li>
 	</ul>	
 	<ul>
 	<li>
 		<a href="https://www.jci.org/articles/view/175834" target="_blank">Comprehensive assessment of immune context and immunotherapy response via noninvasive imaging in gastric cancer</a><br>
 		Zepang Sun, Taojun Zhang, M Usman Ahmad, Zixia Zhou, Liang Qiu, Kangneng Zhou, Wenjun Xiong, Jingjing Xie, Zhicheng Zhang, Chuanli Chen, Qingyu Yuan, Yan Chen, Wanying Feng, Yikai Xu, Lequan Yu, Wei Wang, Jiang Yu, Guoxin Li, <b>Yuming Jiang</b>.<br>
-		<em>Journal of Clinical Investigation</em>,2024.</br>
+		<em>Journal of Clinical Investigation</em>, 2024.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S136184152300258X?via%3Dihub" target="_blank">Volumetric tumor tracking from a single cone-beam X-ray projection image enabled by deep learning</a><br>
 		Jingjing Dai, Guoya Dong, Chulong Zhang, Wenfeng He, Lin Liu, Tangsheng Wang, <b>Yuming Jiang</b>, Wei Zhao, Xiang Zhao, Yaoqin Xie, Xiaokun Liang.<br>
-		<em>Medical Image Analysis</em>,2024.</br>
+		<em>Medical Image Analysis</em>, 2024.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S136184152300244X" target="_blank">A statistical deformation model-based data augmentation method for volumetric medical image segmentation</a><br>
 		Wenfeng He, Chulong Zhang, Jingjing Dai, Lin Liu, Tangsheng Wang, Xuan Liu, <b>Yuming Jiang</b>, Na Li, Jing Xiong, Lei Wang, Yaoqin Xie, Xiaokun Liang.<br>
-		<em>Medical Image Analysis</em>,2024.</br>
+		<em>Medical Image Analysis</em>, 2024.</br>
 	</li>
 	</ul>
 
@@ -706,9 +706,50 @@
 </style>
 <ul>
 	<li>
-		<b>Medical Image Analysis and Reconstruction with Data-efficient Learning</b> <br>
-		at VALSE 2022 workshop "医学数据分析中的深度学习方法", August 2022. <br>
+		<b>91 Noninvasive CT imaging biomarker to predict immunotherapy response in gastric cancer: an multicenter study</b> <br>
+		"Journal for ImmunoTherapy of Cancer 2023", 2023. <br>
 	</li>	
+	<li>
+		<b>1292 Multimodal pathomics integration for prediction of response to PD-(L)1 blockade in patients with advanced gastric cancer</b> <br>
+		"Journal for ImmunoTherapy of Cancer 2023", November 2023. <br>
+	</li>
+	<li>
+		<b>1291 Multi-modal deep learning integrating radiology and pathology images to predict cancer immunotherapy response: a retrospective multi-cohort study</b> <br>
+		"Journal for ImmunoTherapy of Cancer 2023", November 2023. <br>
+	</li>
+	<li>
+		<b>1284 Biology-guided deep learning predicts prognosis and cancer immunotherapy response</b> <br>
+		"Society for Immunotherapy of Cancer (SITC) 37th Annual Meeting (SITC 2022)", November 2022. <br>
+	</li>
+	<li>
+		<b> ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</b> <br>
+		"Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) 2023", 2023. <br>
+	</li>
+	<li>
+		<b> Immunomarker support vector machine classifier for prediction of gastric cancer survival and adjuvant chemotherapeutic benefit</b> <br>
+		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
+	</li>
+	<li>
+		<b> Radiomic Signature of 18F Fluorodeoxyglucose PET/CT for Prediction of Gastric Cancer Survival and Chemotherapeutic Benefits</b> <br>
+		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
+	</li>
+	<li>
+		<b> Young age increases risk for lymph node positivity in gastric cancer: a Chinese multi-institutional database and US SEER database study</b> <br>
+		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
+	</li>
+	<li>
+		<b> Association of Preoperative and Postoperative Serum Carcinoembryonic Antigen with Outcome and Chemotherapy in Gastric Cancer</b> <br>
+		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
+	</li>
+	<li>
+		<b> Overtreatment of Younger Adults with Gastric Cancer: More Chemotherapy Use with Unmatched Survival Gains</b> <br>
+		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
+	</li>	
+	<li>
+		<b> Prognostic and predictive value of immunoscore signature in gastric cancer</b> <br>
+		"2017 American Society of Clinical Oncology (ASCO) Annual Meeting", 2017. <br>
+	</li>
+	
 </ul>
 <br>
 </div>
