--- a/index.html
+++ b/index.html
@@ -706,6 +706,64 @@
 </style>
 <ul>
 	<li>
+		<b>Artificial Intelligence and Imaging for Precision Medicine</b> <br>
+		at Gustave Roussy & University of Paris-Saclay, Paris, France, March 2024 (incoming). <br>
+ 		at the 10th CLASSIC conference, Guangzhou, China, December 2023. <br>
+  		at Ganzhou Reming Hospital, Ganzhou, China, November 2023. <br>
+  		at Southern Medical University, Guangzhou, China, November 2023. <br>
+	  	at Wake Forest University School of Medicine, North Carolina, USA, August 2023. <br>
+  		at the University of Michigan, Ann Arbor, USA, August 2023. <br>
+  		at The Albert Einstein College of Medicine, New York, USA, June 2023. <br>
+  		at Cleveland Clinic, Florida, USA, April 2023. <br>
+  		at University of Colorado, Colorado, USA, March 2023. <br>
+  		at Wake Forest University School of Medicine, North Carolina, USA, February 2023. <br>
+  		at Icahn School of Medicine at Mount Sinai, New York, USA, January 2023. <br>
+  		at The University of Hong Kong, Hong Kong, December 2022. <br>
+  		at the 9th CLASSIC conference, Guangzhou, China, December 2022. <br>
+
+	</li>	
+
+</ul>
+<br>
+</div>
+
+
+<div id="awards">
+<h2 id="Honors">Honors &amp; Awards</h2>
+<style>
+  #Honors{
+    color: #527BBD;
+    border-bottom: 1px solid grey;
+  }
+</style>
+<table style="border-spacing:2px">
+	
+		<tbody>
+		<tr><td>MICCAI 2023 Young Scientist Publication Impact Award Runner-up</a>, 2023 </td></tr>
+
+	</tbody>
+</table>
+<br>
+</div>
+
+<div id="service">
+<h2 id="Professional">Professional Activities</h2>
+<style>
+  #Professional{
+    color: #527BBD;
+    border-bottom: 1px solid grey;
+  }
+</style>
+<li>	
+	<b>Program Committees:</b>
+	<br>
+	Area Chair of Medical Image Computing and Computer Assisted Intervention (MICCAI’22)<br>
+	Senior Program Committee of AAAI Conference on Artificial Intelligence (AAAI’22)<br>
+	Co-organizer of ICCV'21 workshop on Computer Vision for Automated Medical Diagnosis<br>
+	Senior Program Committee of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
+	<p style="margin-top:3px"></p>		
+</li>
+	<li>
 		<b>91 Noninvasive CT imaging biomarker to predict immunotherapy response in gastric cancer: an multicenter study</b> <br>
 		"Journal for ImmunoTherapy of Cancer 2023", 2023. <br>
 	</li>	
@@ -748,49 +806,7 @@
 	<li>
 		<b> Prognostic and predictive value of immunoscore signature in gastric cancer</b> <br>
 		"2017 American Society of Clinical Oncology (ASCO) Annual Meeting", 2017. <br>
-	</li>
-	
-</ul>
-<br>
-</div>
-
-
-<div id="awards">
-<h2 id="Honors">Honors &amp; Awards</h2>
-<style>
-  #Honors{
-    color: #527BBD;
-    border-bottom: 1px solid grey;
-  }
-</style>
-<table style="border-spacing:2px">
-	
-		<tbody>
-		<tr><td>MICCAI 2023 Young Scientist Publication Impact Award Runner-up</a>, 2023 </td></tr>
-
-	</tbody>
-</table>
-<br>
-</div>
-
-<div id="service">
-<h2 id="Professional">Professional Activities</h2>
-<style>
-  #Professional{
-    color: #527BBD;
-    border-bottom: 1px solid grey;
-  }
-</style>
-<li>	
-	<b>Program Committees:</b>
-	<br>
-	Area Chair of Medical Image Computing and Computer Assisted Intervention (MICCAI’22)<br>
-	Senior Program Committee of AAAI Conference on Artificial Intelligence (AAAI’22)<br>
-	Co-organizer of ICCV'21 workshop on Computer Vision for Automated Medical Diagnosis<br>
-	Senior Program Committee of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
-	<p style="margin-top:3px"></p>		
-</li>
-	
+	</li>	
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
