--- a/index.html
+++ b/index.html
@@ -739,8 +739,17 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
-		<tr><td>MICCAI 2023 Young Scientist Publication Impact Award Runner-up</a>, 2023 </td></tr>
-
+		<tr><td>The 1st Faculty Prize, the Center for Artificial Intelligence (CAI) Colloquium at Wake Forest University</a>, 2023 </td></tr>
+		<tr><td>Two papers win the Excellent Science & Technology Academic Paper for the 2022 Shenzhen Science & Technology Academic Paper Selection</a>, 2022 </td></tr>
+		<tr><td>Best Poster Award, Stanford University’s SRP 1st annual Symposium Poster Competition</a>, 2022 </td></tr>
+		<tr><td>Outstanding Reviewer Award, Cancer Biology & Medicine (Journal)</a>, 2022 </td></tr>
+		<tr><td>The first prize of Chinese Medical Science and Technology Awards</a>, 2020 </td></tr>
+		<tr><td>The first prize of Guangdong Province Science and Technological Awards</a>, 2020 </td></tr>
+		<tr><td>Young Investigator Award, The International Gastric Cancer Association (IGCA)</a>, 2019 </td></tr>
+		<tr><td>Oral Presentation at 13th International Gastric Cancer Congress (IGCC)</a>, 2019 </td></tr>
+		<tr><td>Outstanding Graduate Award, Southern Medical University</a>, 2018 </td></tr>
+		<tr><td>Travel Award, 90th Annual Meeting of the Japanese Gastric Cancer Association (JGCA)</a>, 2018 </td></tr>
+		<tr><td>Oral Presentation at 90th Annual Meeting of the Japanese Gastric Cancer Association (JGCA)</a>, 2018 </td></tr>
 	</tbody>
 </table>
 <br>
