--- a/index.html
+++ b/index.html
@@ -826,7 +826,55 @@
 <li>
 	<b>Journal Reviews:</b>
 	<br>
-	Nature Machine Intelligence <br>
+	Annals of Surgical Oncology <br>
+	Artificial Intelligence In Medicine <br>
+	Aging, British Journal of Surgery <br>
+	BMC Public Health, BMC Surgery <br>
+	BMC Medical Informatics and Decision Making <br>
+	BMC Cancer <br>
+	Biomedical Reports <br>
+	Bosnian Journal of Basic Medical Sciences <br>
+	Cancer Immunology Immunotherapy <br>
+	Cancer Medicine <br>
+	Computational Mathematical Methods in Medicine <br>
+	Clinical Epidemiology <br>
+	Cancer Control <br>
+	Cancer Management and Research <br>
+	Discover Oncology <br>
+	Frontiers in Oncology <br>
+	Frontiers in Immunology <br>
+	Frontiers in Surgery <br>
+	Frontiers in Radiology <br>
+	Frontiers in Artificial Intelligence <br>
+	Frontiers in Genetics <br>
+	Frontiers in Cell and Developmental Biology <br>
+	iMeta, Translational Oncology <br>
+	Theranostics <br>
+	Technology in Cancer Research & Treatment <br>
+	Therapeutic Advances in Medical Oncology <br>
+	Cancer Biology & Medicine <br>
+	PLoS One <br>
+	OncoTargets and Therapy <br>
+	Oncology Letters <br>
+	Molecular Medicine Reports <br>
+	Molecular Carcinogenesis <br>
+	Korean Journal of Radiology <br>
+	Journal of Translational Medicine <br>
+	Journal of Cancer <br>
+	Journal of International Medical Research <br>
+	Journal of Gastroenterological Science <br>
+	Journal of Clinical Laboratory Analysis <br>
+	Journal of Healthcare Engineering <br>
+	Journal of Investigative Surgery <br>
+	International Immunopharmacology <br>
+	International Journal of Molecular Medicine <br>
+	The Clinical Respiratory Journal <br>
+	Gastroenterology Research and Practice <br>
+	Experimental and Therapeutic Medicine <br>
+	Disease Markers <br>
+	Clinical Interventions in Aging <br>
+	Scientific Reports <br>
+	Science Bulletin <br>
 	<p style="margin-top:3px"></p>		
 </li>
 <br>
