--- a/index.html
+++ b/index.html
@@ -765,57 +765,14 @@
 </style>
 <li>	
 	<b>Program Committees:</b>
-	<br>
-	Area Chair of Medical Image Computing and Computer Assisted Intervention (MICCAI’22)<br>
-	Senior Program Committee of AAAI Conference on Artificial Intelligence (AAAI’22)<br>
-	Co-organizer of ICCV'21 workshop on Computer Vision for Automated Medical Diagnosis<br>
-	Senior Program Committee of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
+	<div style="float:left; text-align:left">Faculty member at the Atrium Health Wake Forest Baptist Comprehensive Cancer Center</div> <div style="float:right; text-align:right">2023 – Present</div><br>
+
+
+
+	
 	<p style="margin-top:3px"></p>		
 </li>
-	<li>
-		<b>91 Noninvasive CT imaging biomarker to predict immunotherapy response in gastric cancer: an multicenter study</b> <br>
-		"Journal for ImmunoTherapy of Cancer 2023", 2023. <br>
-	</li>	
-	<li>
-		<b>1292 Multimodal pathomics integration for prediction of response to PD-(L)1 blockade in patients with advanced gastric cancer</b> <br>
-		"Journal for ImmunoTherapy of Cancer 2023", November 2023. <br>
-	</li>
-	<li>
-		<b>1291 Multi-modal deep learning integrating radiology and pathology images to predict cancer immunotherapy response: a retrospective multi-cohort study</b> <br>
-		"Journal for ImmunoTherapy of Cancer 2023", November 2023. <br>
-	</li>
-	<li>
-		<b>1284 Biology-guided deep learning predicts prognosis and cancer immunotherapy response</b> <br>
-		"Society for Immunotherapy of Cancer (SITC) 37th Annual Meeting (SITC 2022)", November 2022. <br>
-	</li>
-	<li>
-		<b> ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</b> <br>
-		"Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) 2023", 2023. <br>
-	</li>
-	<li>
-		<b> Immunomarker support vector machine classifier for prediction of gastric cancer survival and adjuvant chemotherapeutic benefit</b> <br>
-		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
-	</li>
-	<li>
-		<b> Radiomic Signature of 18F Fluorodeoxyglucose PET/CT for Prediction of Gastric Cancer Survival and Chemotherapeutic Benefits</b> <br>
-		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
-	</li>
-	<li>
-		<b> Young age increases risk for lymph node positivity in gastric cancer: a Chinese multi-institutional database and US SEER database study</b> <br>
-		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
-	</li>
-	<li>
-		<b> Association of Preoperative and Postoperative Serum Carcinoembryonic Antigen with Outcome and Chemotherapy in Gastric Cancer</b> <br>
-		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
-	</li>
-	<li>
-		<b> Overtreatment of Younger Adults with Gastric Cancer: More Chemotherapy Use with Unmatched Survival Gains</b> <br>
-		"13th International Gastric Cancer Congress (IGCC 2019)", 2019. <br>
-	</li>	
-	<li>
-		<b> Prognostic and predictive value of immunoscore signature in gastric cancer</b> <br>
-		"2017 American Society of Clinical Oncology (ASCO) Annual Meeting", 2017. <br>
-	</li>	
+	
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
