--- a/index.html
+++ b/index.html
@@ -765,18 +765,29 @@
 </style>
 <li>	
 	<b>Program Committees:</b>
-	<div style="float:left; text-align:left">Faculty member at the Atrium Health Wake Forest Baptist Comprehensive Cancer Center</div> <div style="float:right; text-align:right">2023 – Present</div><br>
-
-
-
-	
+	<br>
+	Faculty member at the Atrium Health Wake Forest Baptist Comprehensive Cancer Center<br>
+	Member, the Center for Artificial Intelligence (CAI) at Wake Forest University<br>
+	Guest Associate Editor, Cancer Genetics and Onco-genomics, Frontiers in Genetics (Journal)<br>
+	Guest Associate Editor, Surgical Oncology section, Frontiers in Surgery (Journal)<br>
+	Guest Associate Editor, Cardiothoracic Imaging section, Frontiers in Radiology (Journal)<br>
+	Member, American Association for the Advancement of Science (AAAS)<br>
+	Member, Society for Immunotherapy of Cancer (SITC)<br>	
+	Member, American Association for Cancer Research (AACR)<br>	
+	Associate Editor, Cancer Immunity and Immunotherapy section, Frontiers in Immunology<br>	
+	Topical Advisory Panel Member, Biology (Journal)<br>	
+	Topic Editor of the Editorial Board, Biology (Journal)<br>	
+	Guest Associate Editor, Radiation Oncology section, Frontiers in Oncology (Journal)<br>	
+	Associate Editor, Gastrointestinal Cancers: Hepato Pancreatic Biliary Cancers section, Frontiers in Oncology (Journal)<br>	
+	Guest Associate Editor, Cancer Imaging and Image-directed Interventions section, Frontiers in Oncology (Journal)<br>	
+	Associate Editor, Gastrointestinal Cancers section, Frontiers in Oncology (Journal)<br>	
 	<p style="margin-top:3px"></p>		
 </li>
 	
 <li>	
 	<b>Conference Reviews:</b>
 	<br>
-	IEEE Conference on Computer Vision and Pattern Recognition (CVPR’19-22)<br
+	IEEE Conference on Computer Vision and Pattern Recognition (CVPR’19-22)<br>
 	<p style="margin-top:3px"></p>		
 </li>
 
